<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addStory"
		android:title="@string/btnAddStory"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_new"
		android:showAsAction="always"/>
     <item
        android:id="@+id/ownProfile"
        android:title="@string/btnProfile"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|collapseActionView"/>
      <item
        android:id="@+id/map"
        android:title="@string/btnHomeMap"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_map"
        android:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/advancedSearch"
        android:title="@string/advancedSearch"
        android:orderInCategory="100"/>
</menu>

