<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_register"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Name Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Name TextField -->

        <EditText
            android:id="@+id/nameRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            android:textSize="18sp" />

        <!-- Email Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Email TextField -->

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Password TextField -->

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <!-- Register button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#10BCC9"
            android:onClick="registerUser"
            android:text="@string/btnRegister"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>