<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        
		<!-- View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_login"
            android:textSize="25sp"
            android:textStyle="bold" />
        
		 <!-- Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        
        <!-- Email TextField -->
        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress" />
        
		<!-- Password Label -->		
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/password" />
        
		<!-- Password TextField -->
        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword" />
        
		<!-- Error message -->
        <TextView
            android:id="@+id/errorLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />
        
		<!-- Login button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:onClick="loginUser"
            android:text="@string/btnLogin"
            android:textColor="#fff" />
        
        <!-- Forgot password button -->
        <Button
            android:id="@+id/btnLinkToForgotPwdLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:onClick="navigateToForgotPasswordActivity"
            android:text="@string/btnForgotPwdLogin"
            android:textColor="#ff6347" />
        
		<!-- Link to Register Screen -->
        <Button
            android:id="@+id/btnLinkToRegisterScreenLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:onClick="navigatetoRegisterActivity"
            android:text="@string/btnRegister"
            android:textColor="#228b22"
            android:textStyle="bold" />

        
    </LinearLayout>

</ScrollView>