<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_recommendation"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
                  android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/topRated"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
        
            android:id="@+id/topRated"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_selector"
            android:longClickable="true" >
        </ListView>

        <TextView
              android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recomForYou"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
    
            android:id="@+id/recomForYou"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_selector"
            android:longClickable="true" >
        </ListView>
    </LinearLayout>

</ScrollView>